--- a/dsl_cmoda7_UART.ipynb
+++ b/dsl_cmoda7_UART.ipynb
@@ -175,9 +175,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "#AI Usage\n",
-        "\n",
-        "AI was primarily used to help write code, but due to both LLMs assuming that each 7-segment could be written to, the code kept failing. In addition, the code generated would count incorrectly. Sensibly, we stopped using Gemini and ChatGPT early on in the project."
+        "#AI Usage"
       ],
       "metadata": {
         "id": "9nehcA8RaHwe"
