--- a/dsl_cmoda7_UART.ipynb
+++ b/dsl_cmoda7_UART.ipynb
@@ -76,7 +76,7 @@
         "\n",
         "The 7-segment display will display the current value measured from the ADC.\n",
         "\n",
-        "The UART handles the transmission of data from the FPGA to the computer. It checks for odd parity.\n",
+        "The UART handles the transmission of data from the ADC to the FPGA. It checks for odd parity.\n",
         "\n",
         "When the reset button is pressed, it stops the clock and stop the receiving of data of the ADC. This means the FPGA will not send data."
       ],
